--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/icons/cmd-icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rami' Portfolio</title>
+    <!-- adding custom css -->
     <link rel="stylesheet" href="/style.css">
+    <!-- adding font awesome -->
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   </head>
   <body>
     <!-- i am using tailwind to i will use their classes -->
     <div id="app" class="h-screen grid place-content-center">
-      <div id="window" draggable="true" class="bg-gray-900 
+      <div id="window" draggable="true" class="bg-[#0c0c0c] 
       text-white font-mono 
       w-full 
       h-full
@@ -19,25 +22,36 @@
       xl:w-[1274px]
       xl:h-[700px]
       overflow-auto">
-        <div class="sticky top-0 left-0 bg-gray-900 p-4 border-b border-gray-800">
+        <div class="sticky flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
+          <div class="flex flex-row items-center px-4 gap-1">
+            <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
+            <p class="text-gray-400">Command Prompt</p>
+          </div>
           <div>
-            <span class="bg-red-500 w-3 h-3 inline-block rounded-full mr-2"></span>
-            <span class="bg-yellow-500 w-3 h-3 inline-block rounded-full mr-2"></span>
-            <span class="bg-green-500 w-3 h-3 inline-block rounded-full"></span>
+            <!-- minimize button -->
+            <button class="w-[46px] h-fit py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
+              <i class="fas fa-minus"></i>
+            </button>
+            <!-- expand button -->
+            <button class="w-[46px] h-fit py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
+              <i class="far fa-square" aria-hidden="true"></i>
+            </button>
+            <!-- close button -->
+            <button class="w-[46px] h-fit close py-2 px-4 text-gray-400 hover:text-white hover:bg-red-500 transition:bg duration-200">
+              <i class="fas fa-times"></i>
+            </button>
           </div>
         </div>
         <div class="p-4">
-          <p class="mb-2">C:\> dir</p>
           <p>
-            Volume in drive C is OS<br>
-            Volume Serial Number is 1234-5678<br><br>
-          
-            <span id="date"></span>    &lt;DIR&gt;          Program Files<br>
-            <span class="text-white font-bold">
-              <span id="typewriter"></span>
-              <span class="animate-pulse" id="cursor">|</span>
-          </span>
+            Microsoft Windows [Version 10.0.19044.2728] <br />
+            (c) Microsoft Corporation. All rights reserved. <br />
+            <span id="date"></span>    &lt;DIR&gt;          Rami<br>
           </p>
+          <span class="text-white font-bold">
+            <span id="typewriter"></span>
+            <span class="animate-pulse" id="cursor">|</span>
+        </span>
           
           <div id="parent">
             <p class="flex flex-row gap-3">
