--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       md:h-[580px] 
       xl:w-[1274px]
       xl:h-[700px]
-      overflow-auto">
-        <div class="sticky flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
+      overflow-hidden
+      ">
+      <div class="sticky flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
             <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
             <p class="text-gray-400">Command Prompt</p>
@@ -42,7 +43,7 @@
             </button>
           </div>
         </div>
-        <div class="p-4">
+        <div id="content" class="px-4 max-h-full overflow-auto">
           <p>
             Microsoft Windows [Version 10.0.19044.2728] <br />
             (c) Microsoft Corporation. All rights reserved. <br />
