--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="app" class="h-screen grid place-content-center">
       <div id="window" draggable="true" class="bg-[#0c0c0c] 
       text-white font-mono 
-      w-full 
-      h-full
+      w-screen 
+      h-screen
       md:w-[780px] 
       md:h-[580px] 
       xl:w-[1274px]
@@ -43,7 +43,7 @@
             </button>
           </div>
         </div>
-        <div id="content" class="px-4 max-h-full overflow-auto">
+        <div id="content" class="px-4 h-full overflow-auto">
           <p>
             Microsoft Windows [Version 10.0.19044.2728] <br />
             (c) Microsoft Corporation. All rights reserved. <br />
