--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       md:h-[580px] 
       xl:w-[1274px]
       xl:h-[700px]
+      overflow-auto
       ">
       <div class="sticky flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
@@ -42,7 +43,7 @@
             </button>
           </div>
         </div>
-        <div id="content" class="px-4 h-full overflow-auto">
+        <div id="content" class="px-4">
           <p>
             Microsoft Windows [Version 10.0.19044.2728] <br />
             (c) Microsoft Corporation. All rights reserved. <br />
