--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   </head>
   <body>
-    <!-- i am using tailwind to i will use their classes -->
-    <div id="app" class="h-screen grid place-content-center">
+    <div id="app" class="h-screen overflow-hidden">
       <div id="window" draggable="true" class="bg-[#0c0c0c] 
       text-white font-mono 
       w-screen 
