--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       xl:h-[700px]
       overflow-auto
       ">
-      <div class="sticky position-sticky-polyfill flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
+      <div class="sticky position-sticky-polyfill flex flex-row justify-between  bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
             <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
             <p class="text-gray-400">Command Prompt</p>
