--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   </head>
   <body>
-    <div id="app" class="h-screen overflow-hidden">
-      <div id="window" draggable="true" class="bg-[#0c0c0c] 
+    <div id="app" class="h-screen">
+      <div id="window"  class="bg-[#0c0c0c] 
       text-white font-mono 
       w-screen 
       h-screen
@@ -22,7 +22,7 @@
       xl:h-[700px]
       overflow-auto
       ">
-      <div class="sticky position-sticky-polyfill flex flex-row justify-between  bg-[#2b2b2b] border-b border-gray-800">
+      <div class="sticky h-24 position-sticky-polyfill flex flex-row justify-between bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
             <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
             <p class="text-gray-400">Command Prompt</p>
