--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   </head>
   <body>
-    <div id="app" class="h-screen">
-      <div id="window"  class="bg-[#0c0c0c] 
+    <!-- i am using tailwind to i will use their classes -->
+    <div id="app" class="h-screen grid place-content-center">
+      <div id="window" draggable="true" class="bg-[#0c0c0c] 
       text-white font-mono 
-      w-screen 
-      h-screen
+      w-full 
+      h-full
       md:w-[780px] 
       md:h-[580px] 
       xl:w-[1274px]
       xl:h-[700px]
-      overflow-auto
+      overflow-hidden
       ">
-      <div class="sticky h-24 position-sticky-polyfill flex flex-row justify-between bg-[#2b2b2b] border-b border-gray-800">
+      <div class="sticky position-sticky-polyfill flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
             <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
             <p class="text-gray-400">Command Prompt</p>
@@ -42,7 +43,7 @@
             </button>
           </div>
         </div>
-        <div id="content" class="px-4">
+        <div id="content" class="px-4 max-h-full overflow-auto">
           <p>
             Microsoft Windows [Version 10.0.19044.2728] <br />
             (c) Microsoft Corporation. All rights reserved. <br />
