--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
       xl:h-[700px]
       overflow-hidden
       ">
-       <div class="sticky position-sticky-polyfill flex flex-row justify-between top-0 left-0 z-10 bg-[#2b2b2b] border-b border-gray-800">
+       <div class=" flex flex-row justify-between bg-[#2b2b2b] border-b border-gray-800">
           <div class="flex flex-row items-center px-4 gap-1">
             <img class="w-6 h-6" src="/icons/cmd-icon.jpg" alt="cmd icon">
             <p class="text-gray-400">Command Prompt</p>
           </div>
           <div>
             <!-- minimize button -->
-            <button class="w-[46px] h-fit py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
+            <button class="w-[46px] py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
               <i class="fas fa-minus"></i>
             </button>
             <!-- expand button -->
-            <button class="w-[46px] h-fit py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
+            <button class="w-[46px] py-2 px-4 text-gray-400 hover:text-white hover:bg-gray-700 transition:bg duration-200">
               <i class="far fa-square" aria-hidden="true"></i>
             </button>
             <!-- close button -->
-            <button class="w-[46px] h-fit close py-2 px-4 text-gray-400 hover:text-white hover:bg-red-500 transition:bg duration-200">
+            <button class="w-[46px] close py-2 px-4 text-gray-400 hover:text-white hover:bg-red-500 transition:bg duration-200">
               <i class="fas fa-times"></i>
             </button>
           </div>
