--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <section id="app" class="h-screen grid place-content-center">
       <div id="window" draggable="true" class="bg-[#0c0c0c] 
       text-white font-mono 
-      w-screen
-      h-screen
+      w-full 
+      h-full
       md:w-[780px] 
       md:h-[580px] 
       xl:w-[1274px]
