deleted the typewriter deleting function

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <span id="date"></span>    &lt;DIR&gt;          Rami<br>
           </p>
           <span class="text-white font-bold">
-            <span id="typewriter"></span>
-            <span class="animate-pulse" id="cursor">|</span>
+            <span id="typewriter"><br><br></span>
+            <span class="animate-pulse" id="cursor">_</span>
         </span>
           
           <div id="parent">
